--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.8",
     "simplex-noise": "^4.0.1",
+    "styled-components": "^5.3.6",
     "three": "^0.146.0",
     "web-vitals": "^2.1.4"
   },
