add paragraph animation in about component

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^3.2.1",
     "gsap": "^3.11.3",
     "react": "^18.2.0",
+    "react-anime": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.8",
     "simplex-noise": "^4.0.1",
